--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1> Tahiti Food 2d </h1>
+<h1> Tahiti Food "Je viens d’éditer ce fichier sur GitHub !"</h1>
 
 <h2> Cuisine polynésienne </h2>
 
