deuxieme modif en local

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      Elle est une invitation au voyage et au partage, 
     où chaque bouchée évoque le climat, la nature luxuriante et l’art de vivre polynésien.</p>
 
-<h2> Que manger à Tahiti Et Ses Îles ? </h2>
+<h2> Que manger à Tahiti Et ses Îles ? </h2>
 <img src= "https://www.tahititourisme.fr/app/uploads/iris-images/2752/gastronomie-polynesienne-1-765x550-f50_50.webp">
 <img src= "https://www.tahititourisme.fr/app/uploads/iris-images/2756/poisson-cru-a-stephane-mailion-photography-765x550-f50_50.webp">
 <p> La gastronomie polynésienne et les produits locaux sont connus et reconnus pour leur qualité.
